mysql-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: mysql-deployment
  labels:
    app: mysql-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-pod

  template:
    metadata:
      name: mysql-pod
      labels:
        app: mysql-pod

    spec:
      volumes:
        - name: db-volume
          nfs:
            server: example.example.com
            path: /unbewodpvq1001937_5hxohznf/TrialProdDB
      containers:
        - name: mysql
          image: centos/mysql-57-centos7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-volume
              mountPath: /var/lib/mysql/data
          resources:
            limits:
              memory: "500Mi"
              cpu: "200m"
            requests:
              memory: "300Mi"
              cpu: "100m"
