node-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: node-deployment
  labels:
    app: node-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-pod

  template:
    metadata:
      name: node-pod
      labels:
        app: node-pod

    spec:
      containers:
        - name: apiserver
          image: <image-path>
          ports:
            - containerPort: 3200
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
            requests:
              memory: "300Mi"
              cpu: "250m"
