mysql-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: mysql-db
  labels:
    app: mysql-service
    
spec:
  type: LoadBalancer
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql-pod
