node-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: server-service
  labels:
    app: server-service
    
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 3200
  selector:
    app: node-pod
